affinity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - webapp
            topologyKey: kubernetes.io/hostname
      containers:
      - name: webapp
        image: nginx:latest
        ports:
        - containerPort: 80

# preferredDuringSchedulingIgnoredDuringExecution 
# requiredDuringSchedulingIgnoredDuringExecution
