deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rosine-deployment
  labels:
    app: rosine
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rosine
  template:
    metadata:
      labels:
        app: rosine
    spec:
      containers:
      - name: rosine
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bahatie-bahatie
  labels:
    app: bahatie
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bahatie
  template:
    metadata:
      labels:
        app: bahatie
    spec:
      containers:
      - name: bahatie
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyprien-cyprien
  labels:
    app: cyprien
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cyprien
  template:
    metadata:
      labels:
        app: cyprien
    spec:
      containers:
      - name: cyprien
        image: nginx
        ports:
        - containerPort: 80
