ds.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: logging-agent
  labels:
    k8s-app: logging-agent
spec:
  selector:
    matchLabels:
      name: logging-agent
  template:
    metadata:
      labels:
        name: logging-agent
    spec:
      containers:
      - name: logging-agent
        image: mirrorgooglecontainers/fluentd-elasticsearch:v2.0.4
        resources:
          limits:
            memory: 200Mi
