postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      # - name: postgres
      #   image: postgres:latest
      #   ports:
      #   - containerPort: 5432
      #   env:
      #   - name: POSTGRES_DB
      #     value: mydatabase
      #   - name: POSTGRES_USER
      #     value: myuser
      #   - name: POSTGRES_PASSWORD
      #     value: mypassword
      #   volumeMounts:
      #   - name: postgres-persistent-storage
      #     mountPath: /var/lib/postgresql/data-data

      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5433
        volumeMounts:
        - name: postgres-persistent-storage
          mountPath: /var/lib/postgresql/data-data
  volumeClaimTemplates:
  - metadata:
      name: postgres-persistent-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
