sa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s7-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: s7
  template:
    metadata:
      labels:
        app: s7
    spec:
      serviceAccountName: s7-service-account
      containers:
      - name: s7-container
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: s7-statefulset
spec:
  serviceName: s7
  replicas: 3
  selector:
    matchLabels:
      app: s7
  template:
    metadata:
      labels:
        app: s7
    spec:
      serviceAccountName: s7-service-account
      containers:
      - name: s7-container
        image: nginx:latest
        ports:
        - containerPort: 80
  volumeClaimTemplates:
  - metadata:
      name: s7-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
