test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadbalancer-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-lb-test
  template:
    metadata:
      labels:
        app: nginx-lb-test
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-test
spec:
  selector:
    app: nginx-lb-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
